# aicommit-split

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/aicommit_split/: __init__.py  cli.py
tests/: test_grouping.py
